fix: ensure video is visible when broadcast is enabled

--- a/public/style.css
+++ b/public/style.css
@@ -93,7 +93,7 @@ html, body {
   pointer-events: none;
 }
 
-.player.video-enabled video {
+.player.video-enabled video, .player.broadcast-enabled video {
   opacity: 1;
 }
 
